<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.area23.archon.dialogfragment.FinishedLevel">

    <GridLayout
        android:id="@+id/GridLayoutBoard"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="vertical"
        android:columnCount="1"
        android:rowCount="2"
        android:background="#654acc"
        android:stretchMode="columnWidth">

        <LinearLayout
            android:id="@+id/r0"
            android:tag="@string/s_row0"
            android:layout_height="36dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="#654acc"
            android:minHeight="32dp"
            android:maxHeight="36dp"
            android:minWidth="320dp"
            android:maxWidth="324dp"
            android:layout_row="0"
            android:layout_column="0">
            <ImageView
                android:id="@+id/imgViewLevelCompleted"
                android:layout_width="318dp"
                android:layout_height="31dp"
                android:background="#654acc"
                android:minHeight="31dp"
                android:minWidth="318dp"
                android:layout_gravity="center"
                android:contentDescription="@string/msg_level_completed"
                android:scaleType="center"
                android:src="@drawable/message_levelcompleted"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/r1"
                android:tag="@string/s_row1"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#654acb"
                android:minHeight="32dp"
                android:maxHeight="36dp"
                android:minWidth="320dp"
                android:maxWidth="324dp"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="0">
                <ImageView
                    android:id="@+id/imgViewNextLevel"
                    android:layout_width="318dp"
                    android:layout_height="31dp"
                    android:background="#ba0bb7"
                    android:minHeight="31dp"
                    android:maxHeight="36dp"
                    android:minWidth="318dp"
                    android:maxWidth="324dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/msg_next_level"
                    android:scaleType="center"
                    android:src="@drawable/message_next_level"
                    tools:ignore="ImageContrastCheck" />
                <ImageView
                    android:id="@+id/imgViewPerfect"
                    android:layout_width="318dp"
                    android:layout_height="31dp"
                    android:background="#ba0b0b"
                    android:minHeight="31dp"
                    android:maxHeight="36dp"
                    android:minWidth="318dp"
                    android:maxWidth="324dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/msg_perfect"
                    android:scaleType="center"
                    android:visibility="invisible"
                    android:src="@drawable/message_perfect"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

    </GridLayout>

</FrameLayout>